# Modelisation-Ferroelectrique

./: .gitignore  CMakeLists.txt  README.md
Bibliographie/: create_abaqus_voronoi_mmk.py  plot_G(p).py
Bibliographie/Cours/: Cours.aux  Cours.tex  ferroelectric_field_equations_derivation.html
Bibliographie/Plan_de_route/: Plan_de_route.aux  Plan_de_route.out  Plan_de_route.tex  Plan_de_route.toc
core/include/: Chrono.h  Datafile.h  DofConstraint.h  General.h  Logger.h  Mesh.h  PhaseFieldFerro.h  ResultsExporter.h  Simulation.h  Validation.h  toml.hpp
core/src/: Datafile.cpp  Mesh.cpp  PhaseFieldFerro.cpp  ResultsExporter.cpp  Simulation.cpp  Validation.cpp  main.cpp
core/tests/: test_physics.cpp
data/convergence/: Polarization_convergence_maxchange.gp
data/validation_electrostatique/: plot_electrostatique.gp
data/validation_mecanique/: meca_convergence.gp
data/validation_thermodynamique/: plot_thermo.gp
data/validation_thermodynamique/VTK/: thermo_field.vtk
input/: config.toml
